# supplier-payment-query

./: .env.example  .gitignore  README.md  pyproject.toml  standalone.html  start.sh  supplier-globe.html  supplier-payment.service
backend/: database.py  main.py  models.py  query_engine.py
backend/routers/: payments.py
data/: generate_data.py  payments.csv  payments_real.csv  seed.sql
frontend/: fe_index.html  fe_presentation.html  index.html  pages_index.html  presentation.html
scripts/: init_bsh_data.py  init_db.py  init_real_data.py
